Fixed sidebar not collapsing bug

--- a/client/layout/layout/_topbar.scss
+++ b/client/layout/layout/_topbar.scss
@@ -217,9 +217,6 @@ input.topbar_search-bar {
 
         .topbar_logo-container.topbar-guest {
             margin: 0;
-            .topbar_logo-small .cls-1 {
-                fill: $button-color;
-            }
         }
 
         .topbar_icon-search {
